--- a/src/pages/Blood_pressure.css
+++ b/src/pages/Blood_pressure.css
@@ -1,5 +1,4 @@
 .BP-page {
-  /* margin-top: 2rem; */
   display: flex;
   flex-direction: column;
   padding: 0 0 0 5vw;
@@ -38,7 +37,7 @@
   animation: none;
 }
 .BP-status button {
-  text-align-last: center;
+  text-align: center;
   padding: 0.6vh 9vw;
   border-radius: 1rem;
   background: var(--Red);
@@ -52,7 +51,6 @@
   font-weight: 600;
   line-height: 1.45019rem; /* 116.013% */
 }
-
 .BP-status button p {
   color: #fff;
   text-align: right;
@@ -62,7 +60,6 @@
   font-weight: 400;
   line-height: 1.45019rem; /* 154.684% */
 }
-
 /* date */
 .BP-page .BP-date {
   width: 100%;
@@ -112,7 +109,6 @@
 .BP-page .selected {
   opacity: 0.6;
 }
-
 /* data */
 .BP-data {
   display: flex;
@@ -120,7 +116,6 @@
   align-items: center;
   /* margin-bottom: 8vh; */
 }
-
 .BP-data .box {
   max-width: 100%;
   display: flex;
@@ -135,8 +130,7 @@
   padding: 4vh 2vw;
   align-items: center;
 }
-
-.box .address {
+.BP-data .box .address {
   color: var(--Red);
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
@@ -144,8 +138,7 @@
   font-weight: 700;
   line-height: normal;
 }
-
-.box .add {
+.BP-data .box .add {
   display: flex;
   height: 3rem;
   padding: 1rem 0.75rem;
@@ -157,7 +150,6 @@
   width: 100%;
   height: fixed;
 }
-
 .BP-data .box .bp {
   display: flex;
   gap: 3.125rem;
@@ -172,7 +164,6 @@
   font-weight: 400;
   line-height: normal;
 }
-
 .BP-data .box .num {
   border-radius: 0.3125rem;
   border: 1px solid var(--Red);
@@ -213,7 +204,6 @@
   flex-shrink: 0;
   margin: -0.2em 0;
 }
-
 .BP-data .box .add {
   display: flex;
   justify-content: center;
