--- a/src/pages/Blood_sugar.css
+++ b/src/pages/Blood_sugar.css
@@ -40,29 +40,32 @@
   line-height: 1.45019rem; 
 }
 .bloodsugar .dropdown-content {
-  display: none;
   position: absolute;
   left: 0;
   top: 100%;
   background-color: var(--whiteColor);
-  min-width: 160px;
+  width: 100%;
+  /* min-width: 160px; */
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
+  padding: 1.5rem 1.5rem 0.5rem;
   z-index: 1;
   border-radius: 0.5rem;
 }
 .bloodsugar .dropdown-content div {
   color: black;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1.2rem;
   text-decoration: none;
   display: block;
+  border: 1px solid var(--Red) ;
+  border-radius: 0.5rem;
+  margin-bottom: 1em;
 }
 .bloodsugar .dropdown-content {
   display: block;
 }
 .dropdown-content div {
   color: black;
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
   text-decoration: none;
   display: block;
 }
