--- a/src/pages/Booking-Details.css
+++ b/src/pages/Booking-Details.css
@@ -1,10 +1,12 @@
 .details {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 2rem;
   flex: 1;
+  padding: 1em;
 }
 .details h3 {
   color: var(--Red);
@@ -51,4 +53,221 @@
   width: 50%;
   background: var(--Red);
   transition: all 0.3s ease;
+}
+.details .navigation .status button.active {
+  color: #420000;
+}
+.details .doctor-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  max-width: 100%;
+  flex-wrap: wrap;
+}
+.details .doctor-info .data {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border: 1px solid var(--Red);
+  border-radius: 0.625rem;
+  padding: 1em 1em 1em 1em;
+}
+.details .doctor-info .data .chil {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+.details .doctor-info .data .chat {
+  display: flex;
+  align-items: center;
+  border-radius: 0.625rem;
+  background: #8cffab;
+  padding: 0.2em 3.2em;
+  gap: 0.5em;
+}
+.details .doctor-info .data .ch {
+  color: #33a351;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.details .doctor-info .data .cancel {
+  border: 1px solid var(--Red);
+  background: var(--whiteColor);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  border-radius: 0.625rem;
+  padding: 1em 1em;
+  gap: 0.5em;
+  cursor: pointer;
+}
+.details .doctor-info .data .canc {
+  color: var(--blackColor);
+  font-family: "Roboto", sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  border: none;
+  background-color: var(--whiteColor);
+  cursor: pointer;
+}
+.details .doctor-info .data .nmark{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 0.5em;
+}
+.details .doctor-info .data .video {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  border-radius: 0.625rem;
+  gap: 0.5em;
+  cursor: pointer;
+}
+.details .doctor-info .data .video .cam {
+  border-radius: 0.625rem;
+  border: 1px solid var(--Red);
+  background: var(--whiteColor);
+  border-radius: 2rem;
+  padding: 0.2em 0.2em;
+}
+.details .doctor-info .data .vi {
+  color: var(--graycolor);
+  font-family: "Roboto", sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.45019rem;
+}
+.details .doctor-info .data .onpara {
+  width: 13.25rem;
+  color: #777474;
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.details .doctor-info .data .status.Accept {
+  border-radius: 0.625rem;
+  background: #8cffab;
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  color: #33a351;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding: 0.2em 0.5em;
+}
+.details .doctor-info .data .status.Waiting {
+  border-radius: 0.625rem;
+  background: #94c2ff;
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  color: #1da1f2;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding: 0.2em 0.5em;
+}
+
+/* after-click-btn */
+.details .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(18, 22, 25, 0.65);
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.details .overlay .conf {
+  display: flex;
+  width: 23.75rem;
+  flex-direction: column;
+  text-align: center;
+  gap: 1rem;
+  border: 1px solid var(--CoolGray-20, #dde1e6);
+  background: var(--whiteColor);
+  border-radius: 0.2em;
+  padding: 1rem;
+}
+.details .overlay .conf .icon-canc {
+  display: flex;
+  justify-content: center;
+}
+.details .overlay .conf .icon-canc .trian {
+  display: flex;
+  width: 23rem;
+  flex-direction: column;
+  align-items: center;
+}
+.details .overlay .conf .icon-canc .trian svg {
+  width: 3em;
+  height: 3em;
+  padding: 1em;
+  background: var(--CoolGray-20, #dde1e6);
+  border-radius: 0.2em;
+}
+.details .overlay .conf .icon-canc .xclose {
+  cursor: pointer;
+}
+.details .overlay .conf h3 {
+  color: var(--CoolGray-90, #21272a);
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%; /* 2.2rem */
+}
+.details .overlay .conf p {
+  color: var(--CoolGray-90, #21272a);
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 1.4rem */
+}
+.details .overlay .cancel-book {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  max-height: 3rem;
+  padding: 1rem 4rem;
+  align-items: center;
+  color: var(--whiteColor);
+  border-radius: 0.625rem;
+  background: var(--Red);
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: 0.03125rem;
+  border: none;
+}
+.details .overlay .cancel-book:hover {
+  opacity: 0.7;
 }
