--- a/src/pages/Activity.css
+++ b/src/pages/Activity.css
@@ -1,4 +1,4 @@
-/* dropdown */
+                    /* dropdown */
 
 .dropdown-menu {
   display: flex;
@@ -32,42 +32,7 @@
   box-shadow: 4rem;
 }
 
-
-  /* table */
-
-  .table{
-    width: 33rem;
-    border: 0.1rem solid var(--Red);
-    border-radius: 1rem;
-    padding: 1.5rem;
-    margin: 0 2rem 2rem 25rem;
-  }
-  
-  .table .head{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    align-content: center;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    font-family: 'Roboto',sans-serif;
-    font-size: 1.1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-right: 2rem;
-  }
-  
-  .table .head .trans{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    color: var(--Red);
-  }
-  
-  
-
-/* blood-pressure-sec */
+                  /* blood-pressure-sec */
 
 .detailsbpa {
   display: flex;
@@ -143,7 +108,8 @@
   line-height: 1.45019rem; /* 154.684% */
 }
 
-/* date */
+                        /* date */
+                        
 .detailsbpa .dBP-date {
   width: 100%;
   height: auto;
@@ -154,9 +120,11 @@
   margin-bottom: 2.5rem;
   scrollbar-width: none;
 }
+
 .detailsbpa .dBP-date::-webkit-scrollbar {
   display: none;
 }
+
 .detailsbpa .day-container {
   flex: 0 0 auto;
   display: flex;
@@ -165,6 +133,7 @@
   align-items: center;
   gap: 1.2rem;
 }
+
 .detailsbpa .day-name {
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
@@ -172,6 +141,7 @@
   font-weight: 400;
   word-wrap: break-word;
 }
+
 .detailsbpa .date-container {
   width: 72px;
   height: 72px;
@@ -179,6 +149,7 @@
   border-radius: 3rem;
   cursor: pointer;
 }
+
 .detailsbpa .date-text {
   position: absolute;
   left: 50%;
@@ -189,11 +160,13 @@
   font-weight: 700;
   word-wrap: break-word;
 }
+
 .detailsbpa .selected {
   opacity: 0.6;
 }
 
-/* diagram */
+                        /* graph */
+
 .detailsbpa .dBP-diagram {
   max-width: 100%;
   min-height: 23.125rem;
@@ -202,21 +175,25 @@
   border: 1px solid var(--Red);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+
 .detailsbpa .dBP-diagram .diagrams {
   display: flex;
   flex-direction: row;
   gap: 7rem;
   padding: 1.5rem;
 }
+
 .detailsbpa .dBP-diagram .diagrams .dig {
   width: 50%;
 }
+
 .detailsbpa .dBP-diagram .diagrams .dig .bound {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
+
 .detailsbpa .dBP-diagram .diagrams .dig .bound p {
   display: flex;
   align-items: center;
@@ -228,11 +205,13 @@
   font-weight: 600;
   line-height: 1.45019rem; /* 116.013% */
 }
+
 .detailsbpa .dBP-diagram .diagrams .dig .bound .boun {
   display: flex;
   flex-direction: row;
   gap: 0.5em;
 }
+
 .detailsbpa .dBP-diagram .diagrams .dig .bound .boun .rec {
   width: 1.84363rem;
   height: 1.875rem;
@@ -241,10 +220,11 @@
   border: 1px solid var(--Red);
 }
 
-/* diag */
 
-/* inf-det */
-.detailsbpaa .inf-det {
+
+                      /* inf-det */
+
+.inf-det {
   max-width: 100%;
   min-height: 16rem;
   padding: 1rem;
@@ -252,9 +232,10 @@
   flex-direction: column;
   gap: 1rem;
   border-radius: 0.625rem;
-  border: 1px solid #d9d9d9;
+  border: 2px solid #d9d9d9;
 }
-.detailsbpa .inf-det h3 {
+
+.inf-det h3 {
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
   font-size: 1.875rem;
@@ -262,7 +243,8 @@
   font-weight: 600;
   line-height: normal;
 }
-.detailsbpa .inf-det h4 {
+
+.inf-det h4 {
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
   font-size: 1.5rem;
@@ -270,7 +252,8 @@
   font-weight: 500;
   line-height: normal;
 }
-.detailsbpa .inf-det p {
+
+.inf-det p {
   max-width: 97%;
   color: var(--darkgraycolor);
   font-family: "Roboto", sans-serif;
@@ -279,12 +262,103 @@
   font-weight: 400;
   line-height: normal;
 }
-/* btn */
-.detailsbpa .btn {
+
+                        /* table */
+
+.table{
+  width: 30rem;
+  height: 20rem;
+  border: 0.1rem solid var(--Red);
+  border-radius: 1rem;
+  padding: 4.5rem;
+  margin: 0 2rem 2rem 25rem;
+}
+
+.table .head{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  align-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: -1rem 0 0 0;
+}
+
+.table .head .trans{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: var(--Red);
+  font-weight: 600;
+}
+
+.table .his .data{
+  border: 1px solid var(--Red);
+  margin-top: 1rem;
+  border-radius: 0.6rem;
+  height: 3rem;
+  width: 21rem;
+  
+}
+
+.table .his .status{
+  color: var(--Red);
+  font-weight: 600;
+  font-family: 'Roboto',sans-serif;
+  margin: 1rem 0 0 1rem;
+}
+
+.table .his .mesure{
+  margin: -1.1rem 0 0 5rem;
+  font-family: 'Roboto',sans-serif;
+  color: #1F1F1F;
+}
+
+.table .his .unit-p{
+  margin: -1.3rem 0 0 3.4rem;
+  font-family: 'Roboto',sans-serif;
+  font-weight: 600;
+  color: #1F1F1F;
+}
+
+.table .his .line1-p{
+  color: var(--Red);
+  font-weight: 600;
+  font-family: 'Roboto',sans-serif;
+  margin: -1.2rem 0 0 11.9rem;
+}
+
+.table .his .line2-p{
+  color: var(--Red);
+  font-weight: 600;
+  font-family: 'Roboto',sans-serif;
+  margin: -1.2rem 0 0 17.9rem;
+}
+
+.table .his .date-p{
+  margin: -1.2rem 0 0 12.4rem;
+  font-family: 'Roboto',sans-serif;
+  color: #1F1F1F;
+}
+
+.table .his  .day-p{
+  margin: -1.2rem 0 0 18.3rem;
+  font-family: 'Roboto',sans-serif;
+  color: #1F1F1F;
+}
+                            /* btn */
+
+.btn {
   display: flex;
   justify-content: center;
 }
-.detailsbpa .btn .addrec {
+
+.btn .addrec {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -301,13 +375,13 @@
   line-height: 100%;
   letter-spacing: 0.03125rem;
 }
-.detailsbpa .btn .addrec:hover {
+
+.btn .addrec:hover {
   opacity: 0.7;
 }
 
+                      /* blood sugar */
 
-
-/* blood sugar */
 .average{
   display: flex;
   flex-direction: row;
@@ -348,6 +422,7 @@
   line-height: 1.45019rem; /* 116.013% */
   margin: -0.1rem 0 0 0.3rem;
 }
+
 .bloodsugarda {
   position: relative;
   padding: 2rem 2rem 2.5em 2rem;
@@ -357,12 +432,14 @@
   justify-content: center;
   gap: 2.5em;
 }
+
 .bloodsugarda .stb {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
+
 .bloodsugarda .stb h3 {
   color: var(--Red);
   font-family: "Roboto", sans-serif;
@@ -370,7 +447,9 @@
   font-style: normal;
   font-weight: 700;
 }
-/* date */
+
+                        /* date */
+
 .bloodsugarda .date {
   width: 100%;
   height: auto;
@@ -381,44 +460,53 @@
   margin-bottom: 2.5rem;
   scrollbar-width: none;
 }
-.bloodsugarda .dated::-webkit-scrollbar {
+
+.bloodsugarda .date::-webkit-scrollbar {
   display: none;
 }
+
 .bloodsugarda .day-container {
   flex: 0 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1.25rem;
+  gap: 1.2rem;
 }
+
 .bloodsugarda .day-name {
-  color: #1f1f1f;
+  color: var(--graycolor);
+  font-family: "Roboto", sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+  word-wrap: break-word;
+}
+
+.bloodsugarda .date-container {
+  width: 72px;
+  height: 72px;
+  position: relative;
+  border-radius: 3rem;
+  cursor: pointer;
+}
+
+.bloodsugarda .date-text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   font-size: 2rem;
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-family: 'Roboto',sans-serif;
-  margin: -2.8rem 0 0 20rem;
+  font-weight: 700;
+  word-wrap: break-word;
 }
 
-                          /* dates */
-
-
-
-                          /* graph */
-
-
-
-                          /* reading */
-                      
-.read{
-  border: 0.1rem solid darkgray;
-  border-radius: 1rem;
-  margin: 0 auto;
-  border: 1px var(--Red) solid;
-  flex-direction: column;
-  align-items: center;
+.bloodsugarda .selected {
+  opacity: 0.6;
 }
+
+                      /* diagram */
+
 .diagram .chart-title {
   display: flex;
   flex-direction: row;
@@ -429,9 +517,11 @@
   line-height: 1rem;
   gap: 0.63em;
 }
+
 .diagram .chart-pre-diabetes {
   width: 100%;
 }
+
 .diagram .chart-pre-diabetes .pre {
   display: flex;
   flex-direction: row;
@@ -441,28 +531,33 @@
   font-weight: 600;
   gap: 0.2em;
 }
+
 .diagram .chart-pre-diabetes .defnum {
   color: var(--Red);
   font-size: clamp(1.25rem, 3vw, 1.5em);
 }
+
 .diagram .chart-axis {
   display: flex;
   padding-top: 3rem;
   align-items: flex-start;
   gap: 2.5vw;
 }
+
 .diagram .chart-values {
   max-height: 19.69506rem;
   display: flex;
   flex-direction: column-reverse;
   gap: 1.5rem;
 }
+
 .diagram .lcp {
   display: flex;
   flex-direction: column;
   gap: 1em;
   width: 100%;
 }
+
 .diagram .chart-days {
   display: flex;
   justify-content: space-around;
@@ -470,6 +565,7 @@
   width: 100%;
   gap: 2vw;
 }
+
 .diagram .chart-bars {
   display: flex;
   justify-content: space-around;
@@ -478,6 +574,7 @@
   gap: 2vw;
   padding-left: 0.4em;
 }
+
 .chart-bar-outer {
   flex: 1 1 auto;
   max-width: 1.31369rem;
@@ -486,6 +583,7 @@
   border: 1px solid var(--Red-transparent);
   position: relative;
 }
+
 .chart-bar-inner {
   background-color: var(--Red);
   border-radius: 0.3125rem;
@@ -494,6 +592,7 @@
   bottom: 0;
   height: 0;
 }
+
 .diagram .chart-days,
 .chart-value {
   color: var(--graycolor);
@@ -502,75 +601,40 @@
   font-weight: 400;
 }
 
-/* inf-det */
-.bloodsugarda .inf-det {
-  max-width: 100%;
-  min-height: 16rem;
-  border-radius: 0.625rem;
-  border: 1px solid #d9d9d9;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.bloodsugarda .inf-det h3 {
-  color: var(--graycolor);
-  font-family: "Roboto", sans-serif;
-  font-size: 1.875rem;
-  font-style: normal;
+                                /* table */
+
+.table .his .unit{
+  margin: -1.3rem 0 0 2rem;
+  font-family: 'Roboto',sans-serif;
   font-weight: 600;
-  line-height: normal;
-}
-.bloodsugarda .inf-det h4 {
-  color: var(--graycolor);
-  font-family: "Roboto", sans-serif;
-  font-size: 1.5rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-.bloodsugarda .inf-det p {
-  max-width: 97%;
-  color: var(--darkgraycolor);
-  font-family: "Roboto", sans-serif;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-/* btn */
-.bloodsugarda .btn {
-  display: flex;
-  justify-content: center;
-}
-.bloodsugarda .btn .addrec {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  padding: 1rem 0.75rem;
-  align-items: center;
-  flex: 0.3;
-  color: var(--whiteColor);
-  border-radius: 0.625rem;
-  background: var(--Red);
-  font-family: "Roboto", sans-serif;
-  font-size: 1.5rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 100%;
-  letter-spacing: 0.03125rem;
-}
-.bloodsugarda .btn .addrec:hover {
-  opacity: 0.7;
+  color: #1F1F1F;
 }
 
+.table .his .line1{
+  color: var(--Red);
+  font-weight: 600;
+  font-family: 'Roboto',sans-serif;
+  margin: -1.2rem 0 0 10rem;
+}
 
+.table .his .line2{
+  color: var(--Red);
+  font-weight: 600;
+  font-family: 'Roboto',sans-serif;
+  margin: -1.2rem 0 0 15.9rem;
+}
 
+.table .his .date{
+  margin: -1.2rem 0 0 10.4rem;
+  font-family: 'Roboto',sans-serif;
+  color: #1F1F1F;
+}
 
-
-
-
-
+.table .his  .day{
+  margin: -1.2rem 0 0 16.4rem;
+  font-family: 'Roboto',sans-serif;
+  color: #1F1F1F;
+}
 
 @media (max-width: 750px) {
   .detailsbpa .dBP-diagram .diagrams {
