--- a/src/pages/BMI.css
+++ b/src/pages/BMI.css
@@ -1,38 +1,52 @@
+.bmi{
+  display: flex;
+  justify-content: center;
+  padding: 6rem 15rem 2.5rem;
+  flex: 1;
+}
 .bmi_r{
-    width: 90vw; 
-   height: 100vh; 
-   padding:5rem 19.5rem ;
-}
-.bmir{
-    width: 49rem;
-height: 40.375rem;
-padding:2.5rem 22rem;
-flex-shrink: 0;
-border-radius: 0.625rem;
-border: 1px solid #BE0202;
-color: #BE0202;
-font-family: Roboto;
-font-size: 2.25rem;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+  padding: 1.5rem;
+  /* min-height: 100vh; */
+  /* max-width: 63vw; */
+  width: 100%;
+  max-width: 59rem;
+  /* height: 50.375rem; */
+  border: 1px solid #be0202;
+  border-radius: 0.625rem;
 }
 
-.rbmi__r{
-    color: #BE0202;
-font-family: Roboto;
-font-size: 2.25rem;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+.bmir h2{
+  /* width: 49rem; */
+  /* height: 40.375rem; */
+  /* padding: 2.5rem 22rem; */
+  text-align: center;
+  flex-shrink: 0;
+  border-radius: 0.625rem;
+  color: #be0202;
+  font-family: 'Roboto',sans-serif;
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.rbodyr{
+  padding: 2rem;
+}
+.rbmi__r {
+  color: #be0202;
+  font-family: Roboto;
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
-.bmi_p{
-    color: #1F1F1F;
+.bmi_p {
+  color: #1f1f1f;
 
-font-family: Roboto;
-font-size: 1.25rem;
-font-style: normal;
-font-weight: 500;
-line-height: 110%; /* 1.375rem */
+  font-family: Roboto;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 110%; 
 }
