--- a/src/pages/details-bloodpressure.css
+++ b/src/pages/details-bloodpressure.css
@@ -125,106 +125,12 @@
   border: 1px solid var(--Red);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.detailsbp .dBP-diagram .diagrams{
-  display: flex;
-  flex-direction: row;
-  gap: 5rem;
-  padding: 1.5rem;
-}
-.detailsbp .dBP-diagram .diagrams .dig{
+.detailsbp element.style{
   width: 50%;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-.detailsbp .dBP-diagram .diagrams .dig .bound{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.detailsbp .dBP-diagram .diagrams .dig .bound p{
-  display: flex;
-  align-items: center;
-  color: var(--graycolor);
-  text-align: right;
-  font-family: 'Roboto',sans-serif;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 1.45019rem; /* 116.013% */
-}
-.detailsbp .dBP-diagram .diagrams .dig .bound .boun{
-  display: flex;
-  flex-direction: row;
-  gap: 0.5em;
-}
-.detailsbp .dBP-diagram .diagrams .dig .bound .boun .rec{
-  width: 1.84363rem;
-  height: 1.875rem;
-  flex-shrink: 0;
-  border-radius: 0.3125rem;
-  border: 1px solid var(--Red);
-  background: var(--Red);
 }
 
-/* diag */
-.detailsbp .dBP-diagram .diagrams .diagramu .diagraml{
-  padding: 2.5rem 0rem 0rem;
-}
-.detailsbp .dBP-diagram .diagrams .diagram-container {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  gap: 1.5rem;
-}
-.detailsbp .dBP-diagram .diagrams .diagram-container .values {
-  display: flex;
-  flex-direction: column;
-  gap: 2.5rem;
-}
-.detailsbp .dBP-diagram .diagrams .diagram-container .values p {
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.25rem;
-  color: var(--graycolor);
-}
-.detailsbp .dBP-diagram .diagrams .diagram-container .lines {
-  display: flex;
-  flex-direction: column;
-  gap: 3.62rem;
-  width: 100%;
-}
-.detailsbp .dBP-diagram .diagrams .diagram-container .line {
-  position: relative;
-  border: 2.77px dashed var(--Red);
-  opacity: 0.30;
-  border-radius: 5em;
-}
-.detailsbp .dBP-diagram .diagrams .diagram-container .chart{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 2em;
-  margin-top: 1em;
-}
-.detailsbp .dBP-diagram .diagrams .diagram-container .chart .x-axis{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-around;
-  /* display: none; */
-}
-.dBP-diagram .data-point {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: var(--Red); /* لون نقطة البيانات */
-  position: absolute;
-}
 
-.x-axis-date {
 
-}
 
 
 
