--- a/src/pages/Smart_health_metrics.css
+++ b/src/pages/Smart_health_metrics.css
@@ -15,10 +15,9 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  justify-content: center;
   gap: 1.4em;
   flex-grow: 1;
-  justify-content: center;
-  align-items: center;
 }
 .child .recording{
   overflow: hidden;
@@ -28,8 +27,6 @@
   justify-content: center;
   display: flex;
   width: 100%;
-  max-width: 19.8em;
-  max-height: 32em;
   border-radius: 10px;
   border: 1px solid #A4A2A2;
   transition: transform 0.3s, box-shadow 0.3s; 
@@ -42,7 +39,8 @@
 }
 .child .recording img{
   width: 100%;
-  height: auto;
+  max-width: 15rem;
+  min-height: 10rem;
   padding: 1.2vw;
   justify-content: center;
   align-items: center;
@@ -50,7 +48,7 @@
   flex: 1 0 0;
 }
 .inf{
-  padding: 0vw 2vw 2vw 2vw;
+  padding: 0vw 2vw 1.5vw 2vw;
   gap: 0.9vw;
   display: flex;
   flex-direction: column;
@@ -73,7 +71,7 @@
 }
 .child .recording .btn{
   display: flex;
-  padding: 0.5vw 0vw;
+  padding: 0.5vw 0.2vw;
   width: 100%;
   justify-content: center;
   align-items: center;
@@ -91,7 +89,7 @@
   opacity: 0.7;
 }
 /* responsine design */
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
   .child{
   flex-wrap: wrap;
 }
