--- a/src/pages/Booking_Online.css
+++ b/src/pages/Booking_Online.css
@@ -57,6 +57,7 @@
   margin-left: -0.7rem;
 }
 
+
                         /* Card-doctor-number */
 
 .card .d-tele p{
@@ -141,6 +142,8 @@
   padding-left: 0.5rem;
 }
 
+                        /* Card-(doctor_user)-rate (popup) */
+
 .card .rate  .popup-r{
   width: 100%;
   height: 83.5rem;
@@ -208,5 +211,51 @@
   cursor: pointer;
   background-color: var(--secondaryColor);
   color: var(--Red);
+  border: none;
+}
+
+                        /* Complete - Button*/
+
+.card .book .popup-b{
+  width: 100%;
+  height: 83.5rem;
+  background: rgba(18, 22, 25, 0.65);
+  position: absolute;
+  top: 10%;
+  text-align: center;
+  left: 0%;
+  padding: 25%;
+}
+
+.card .book .popup-b .check{
+  width: 20rem;
+  height: 30rem;
+}
+
+.card .book .popup-b .btn{
+  display: flex;
+  min-height:5vh;
+  width: 9em;
+  height: 3.5rem;
+  padding: 1rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.625rem;
+  border: 2px solid var(--Red);
+  background: var(--Red);
+  color: var(--whiteColor);
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.5em;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: 0.5px;
+  margin: -3rem 0 0 14rem;
+}
+
+.card .book .popup-b .btn:hover{
+  cursor: pointer;
+  background-color: var(--blackred);
+  color: var(--whiteColor);
   border: none;
 }
