--- a/src/pages/BMI.css
+++ b/src/pages/BMI.css
@@ -1,8 +1,8 @@
 .bmi{
-  display: flex;
+   gap: rem;
   justify-content: center;
   padding: 6rem 15rem 2.5rem;
-  flex: 1;
+  
 }
 .bmi_r{
   padding: 1.5rem;
@@ -319,4 +319,44 @@ font-size: 1.25rem;
 font-style: normal;
 font-weight: 500;
 line-height: 110%; /* 1.375rem */
+}
+
+.rfotr{
+  width: 84.375rem;
+height: 16rem;
+margin: 2rem -13rem;
+gap: 4rem;
+flex-shrink: 0;
+border-radius: 0.625rem;
+border: 1px solid #D9D9D9;
+}
+
+.rfotr2{
+  color: #1F1F1F;
+  font-family: Roboto;
+  margin: 1rem 1rem;
+  font-size: 1.875rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.rfotr3{
+  color: #1F1F1F;
+font-family: Roboto;
+margin: 1rem 1rem;
+font-size: 1.5rem;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+
+.rfotr4{
+  color: #353535;
+font-family: Roboto;
+margin: 1rem 1rem;
+font-size: 1.25rem;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
 }
