--- a/src/pages/BMI.css
+++ b/src/pages/BMI.css
@@ -1,8 +1,6 @@
 .bmi{
-   gap: rem;
   justify-content: center;
   padding: 6rem 15rem 2.5rem;
-  
 }
 .bmi_r{
   padding: 1.5rem;
@@ -322,6 +320,26 @@ font-size: 1.25rem;
 font-style: normal;
 font-weight: 500;
 line-height: 110%; /* 1.375rem */
+}
+
+.heiherebut{
+  display: flex;
+width: 29.0625rem;
+height: 3rem;
+margin: 10rem 13rem;
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
+border-radius: 0.625rem;
+border: 2px solid #BE0202;
+background: #BE0202;
+color: var(--Default-White, #FFF);
+font-family: Roboto;
+font-size: 1.5rem;
+font-style: normal;
+font-weight: 500;
+line-height: 100%; /* 1.5rem */
+letter-spacing: 0.03125rem;
 }
 
 .rfotr{
