--- a/src/pages/chat.css
+++ b/src/pages/chat.css
@@ -1,25 +1,25 @@
-.chat {
+.chatting {
   display: flex;
   height: 100vh;
   padding: 2.5rem;
-  gap: 0.5em;
+  gap: 1.25em;
 }
-.chat .sidebarchat{
+.chatting .sidebarchat {
   display: flex;
   flex-direction: column;
   flex: 2;
   gap: 2.5rem;
 }
-.chat .sidebarchat .sidebar {
+.chatting .sidebarchat .sidebar {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
   gap: 2rem;
 }
-.chat .sidebarchat .sidebar::-webkit-scrollbar{
+.chatting .sidebarchat .sidebar::-webkit-scrollbar {
   display: none;
 }
-.chat .sidebarchat h3 {
+.chatting .sidebarchat h3 {
   color: var(--Red);
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
@@ -27,11 +27,7 @@
   font-weight: 700;
   line-height: normal;
 }
-.chat .sidebar .doctorschat {
-
-}
-
-.chat .sidebarchat .sidebar .doctorschat .slide {
+.chatting .sidebarchat .sidebar .doctorschat .slide {
   display: flex;
   flex-direction: row;
   border-radius: 1.25rem;
@@ -39,10 +35,22 @@
   padding: 1.25em 1em;
   gap: 0.5em;
   width: 100%;
+  cursor: pointer;
 }
-.chat .sidebarchat .sidebar .doctorschat .slide .doctorAvatar {
+.chatting .sidebarchat .sidebar .doctorschat .slide:hover {
+  background: #d9d9d9;
+}
+.chatting .sidebarchat .sidebar .doctorschat .slide .doctorAvatarContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 50px;
   height: 50px;
+}
+.chatting .sidebarchat .sidebar .doctorschat .slide .doctorAvatar {
+  width: 100%;
+  height: 100%;
   position: relative;
   overflow: hidden;
   border-radius: 8px;
@@ -50,50 +58,64 @@
   align-items: center;
   justify-content: center;
 }
-.chat .sidebarchat .sidebar .doctorschat .slide .doctorAvatar .zoomedImage {
-  object-fit: cover; 
-  object-position: -16px center; 
+.chatting .sidebarchat .sidebar .doctorschat .slide .doctorAvatar .zoomedImage {
+  object-fit: cover;
+  object-position: -16px center;
   width: auto;
-  height: 450%; 
-  transform: translateY(31%); 
+  height: 450%;
+  transform: translateY(31%);
+  z-index: 1;
 }
-.chat .sidebarchat .sidebar .doctorschat .slide .doctorInfo {
+.chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
 }
-.chat .sidebarchat .sidebar .doctorschat .slide .doctorInfo .doctortext {
+.chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo .doctortext {
   display: flex;
   flex-direction: column;
   gap: 0.7rem;
 }
-.chat .sidebarchat .sidebar .doctorschat .slide .doctorInfo .doctorName {
+.chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo .doctorName {
   color: #1c1f1e;
   font-size: 20px;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
-.chat .sidebarchat .sidebar .doctorschat .slide .doctorInfo .doctorSpeciality,
-.chat .sidebarchat .sidebar .doctorschat .slide .doctorInfo .lastMessage,
-.chat .sidebarchat .sidebar .doctorschat .slide .doctorInfo .messageTime {
+.chatting
+  .sidebarchat
+  .sidebar
+  .doctorschat
+  .slide
+  .doctorInfo
+  .doctorSpeciality,
+.chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo .lastMessage,
+.chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo .messageTime {
   color: #a7a6a5;
-  font-size: 16px;
+  font-size: 1rem;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
 }
-.chat .sidebarchat .sidebar .doctorschat .slide .doctorInfo .lastMessage {
-  font-size: 15px;
+.chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo .lastMessage {
+  font-size: 0.9375rem;
 }
-.chat .sidebarchat .sidebar .doctorschat .slide .doctorInfo .mess {
+.chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo .mess {
   display: flex;
   flex-direction: column;
   gap: 2.5rem;
 }
-.chat .sidebarchat .sidebar .doctorschat .slide .doctorInfo .unreadMessages {
+.chatting
+  .sidebarchat
+  .sidebar
+  .doctorschat
+  .slide
+  .doctorInfo
+  .unreadMessages {
   width: 24px;
   height: 24px;
-  background-color: #ff6c52;
+  background-color: var(--Red);
+  opacity: 0.7;
   border-radius: 50%;
   color: white;
   font-size: 12px;
@@ -102,43 +124,242 @@
   text-align: center;
   line-height: 24px;
 }
-.onlineIndicator {
-  /* width: 10px;
-  height: 10px;
-  background-color: #66CA98;
+.chatting .sidebarchat .sidebar .doctorschat .slide .onlineIndicator {
+  width: 0.625rem;
+  height: 0.625rem;
+  background-color: #66ca98;
   border-radius: 50%;
   border: 1px solid white;
   position: absolute;
-  left: 53px;
-  top: 62px; */
+  right: 0.1em;
+  bottom: 0.1em;
+  z-index: 2;
+  transform: translate(50%, 50%);
 }
-
-
 .chatm {
   flex: 3;
   display: flex;
   flex-direction: column;
-  background-color: #e5ddd5;
+  gap: 2rem;
 }
-
-.messages {
-  flex: 1;
+.chatm .doctorinfor {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+.chatm .doctorinfor .infor {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.13rem;
+}
+.chatm .doctorinfor .infor h3 {
+  color: #2e2e2e;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 0.75rem;
+}
+.chatm .doctorinfor .infor p {
+  color: #2e2e2e;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.375rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 0.75rem;
+}
+.chatm .doctorinfor .contactimgchat {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 6rem;
+  height: 6rem;
+}
+.chatm .imgd {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.chatm .doctorinfor .contactimgchat .onlineIndicator{
+  width: 1.25rem;
+  height: 1.12875rem;
+  background-color: #66ca98;
+  border-radius: 50%;
+  border: 1px solid white;
+  position: absolute;
+  right: 0.9em;
+  bottom: 0.8em;
+  z-index: 2;
+  transform: translate(50%, 50%);
+}
+.chatm .zoomedImagechat {
+  border-radius: 100%;
+  object-fit: cover;
+  object-position: -34px center;
+  width: auto;
+  height: auto;
+  height: 450%;
+  transform: translateY(31%);
+  z-index: 1;
+}
+.chatm .chat-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
   overflow-y: auto;
+}
+.chatm .chat-messages {
+  display: flex;
+  flex-direction: column-reverse;
+  overflow-y: auto;
+  width: 100%;
+}
+.chatm .chat-messages::-webkit-scrollbar {
+  display: none;
+}
+.chatm .chat-messages .message {
+  margin: 0.5rem;
+}
+.chatm .chat-messages .message.user {
+  padding: 1rem;
+  border-radius: 1.25rem 0rem 1.25rem 1.25rem;
+  background: var(--Red);
+  color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  margin-bottom: 0.2rem;
+  word-wrap: break-word;
+  word-break: break-word;
+  white-space: pre-wrap;
+  align-self: flex-end;
+  max-width: 50%;
+}
+.chatm .chat-messages .message.doctor {
+  padding: 1rem;
+  color: #1f1f1f;
+  font-family: 'Montserrat',sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border-radius: 0rem 1.25rem 1.25rem 1.25rem;
+  background: #F2F7FB;
+  word-wrap: break-word;
+  word-break: break-word;
+  white-space: pre-wrap;
+  align-self: flex-start;
+  max-width: 50%;
 }
 
 .input-area {
-  border-top: 1px solid #ddd;
-  padding: 10px;
+  padding: 0em 1.5em;
   display: flex;
+  gap: 1.25rem;
 }
-
-.input-area input {
-  flex: 1;
-  padding: 10px;
+.input-area .input-container {
+  position: relative;
+  width: 100%;
+}
+.input-area .input-container .input-icon {
+  position: absolute;
+  left: 0.5em;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  cursor: pointer;
+}
+.input-area .input-container .textarea-custom {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.25rem;
+  border: 1px solid var(--Red);
+  background: #fff;
+  box-sizing: border-box;
+  overflow-y: auto; 
+  scrollbar-width: none;
+  padding: 1rem 2.5rem;
+}
+.input-area .input-container .textarea:focus {
+  outline: none; 
+  border: 1px solid transparent;
+}
+.input-area .input-container .textarea {
+  width: 100%;
+  height: 100%;
+  padding-top: 1rem;
+  box-sizing: border-box;
   border: none;
-  margin-right: 10px;
+  resize: none;
+  overflow-y: auto; 
+  scrollbar-width: none;
+}
+.textarea-custom::-webkit-scrollbar {
+  display: none;
+}
+.input-area button {
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
-.input-area button {
-  padding: 10px;
+.emoji-picker-position {
+  position: relative;
+  display: flex; 
+}
+
+.emoji-picker-container {
+  position: absolute;
+  width: 20em;
+  height: 20em;
+  bottom: 90%; 
+  left: 50%;
+  transform: translateX(-50%); 
+  z-index: 5;
+  background-color: white; 
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 5px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2); 
+  overflow-y: auto;
+}
+.emoji-picker-container::-webkit-scrollbar {
+  display: none;
+}
+
+.sidebar-toggle {
+  display: none;
+  position: fixed;
+  left: 1rem;
+  top: 10rem;
+  background: none;
+  border: none;
+  z-index: 1;
+}
+
+@media (max-width: 1000px) {
+  .chatting .sidebarchat{
+    display: none;
+  }
+  .chatm {
+    width: 100%;
+  }
+  .sidebar-toggle {
+    display: block;
+  }
 }
