--- a/src/pages/chat.css
+++ b/src/pages/chat.css
@@ -137,6 +137,7 @@
   transform: translate(50%, 50%);
 }
 .chatm {
+  position: relative;
   flex: 3;
   display: flex;
   flex-direction: column;
@@ -322,25 +323,34 @@
   position: relative;
   display: flex; 
 }
-
 .emoji-picker-container {
   position: absolute;
-  width: 20em;
-  height: 20em;
+  width: 10vw;
+  max-height: 20vh; 
   bottom: 90%; 
   left: 50%;
-  transform: translateX(-50%); 
+  transform: translateX(-50%) translateY(10em); 
+  transition: transform 0.5s ease, visibility 0.5s ease;
   z-index: 5;
-  background-color: white; 
+  background-color: white;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 1em;
   padding: 5px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2); 
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
   overflow-y: auto;
+  visibility: hidden; 
+  opacity: 0;
+}
+
+.emoji-picker-container.show {
+  transform: translateX(-50%) translateY(0); 
+  visibility: visible; 
+  opacity: 1;
 }
 .emoji-picker-container::-webkit-scrollbar {
   display: none;
 }
+
 
 .sidebar-toggle {
   display: none;
