--- a/src/pages/chat.css
+++ b/src/pages/chat.css
@@ -296,6 +296,9 @@
   scrollbar-width: none;
   padding: 1rem 2.5rem;
 }
+.input-area .input-container:hover {
+  opacity: 0.7;
+}
 .input-area .input-container .textarea:focus {
   outline: none; 
   border: 1px solid transparent;
@@ -317,6 +320,9 @@
   background: none;
   border: none;
   cursor: pointer;
+}
+.input-area button:hover {
+  opacity: 0.7;
 }
 
 .emoji-picker-position {
@@ -349,6 +355,8 @@
 .emoji-picker-container::-webkit-scrollbar {
   display: none;
 }
+
+
 
 
 .sidebar-toggle {
