--- a/src/pages/sign_up.css
+++ b/src/pages/sign_up.css
@@ -3,6 +3,9 @@
   flex-direction: row;
   gap: 1em;
 }
+.sig span{
+  animation: none;
+}
 .sig .flex2 {
   max-width: 100%;
   display: flex;
@@ -26,7 +29,7 @@
 .sig .flex1 input::placeholder{
   font-size: 0.8em;
 }
-.sig .flex1 #nam {
+.sig .flex1 #first-name , #last-name ,#email ,#password{
   display: flex;
   height: 48px;
   padding:2vh;
@@ -34,6 +37,7 @@
   align-items: center;
   align-self: stretch;
   border-radius: 0.4em;
+  font-size: medium;
   border: 1px solid var(--Red);
 }
 .sig h2 {
@@ -153,7 +157,7 @@
   border-radius: 0.4em;
   border: 2px solid var(--Red);
   font-family: "Roboto", sans-serif;
-  font-size: 1.7em;
+  font-size: 1.4em;
   font-weight: 500;
   line-height: 100%;
   letter-spacing: 0.10em;
