--- a/src/pages/sign_up.css
+++ b/src/pages/sign_up.css
@@ -29,7 +29,7 @@
 .sig .flex1 input::placeholder{
   font-size: 0.8em;
 }
-.sig .flex1 #first-name , #last-name ,#email ,#password{
+.sig .flex1 #name , #last_name ,#email ,#password{
   display: flex;
   height: 48px;
   padding:2vh;
@@ -226,6 +226,7 @@
   font-size: 0.8em;
   padding: 0.5em;
 }
+
 
 /* responsive */
 @media screen and (max-width: 1090px) {
